LIST OF CHANGES FOR NPG-QC PACKAGE

 - can_run returns false for pulldown_metrics check for tag 0

release 65.1.1
 - explicitly use pre v6 bwa for rna_seqc rRNA alignment as input not name sorted 
   (tolerated in old version but not bwa0_6)

release 65.1
 - bwa to bwa0_6 for rna_seqc rRNA alignment

release 65.0
 - adapter autoqc check - discard code for fastq input
 - add genotype_call_results_reporter script to report genotype_call
   results to the LIMs
 - tag_metics matches_pf_percent only stored to three decimals places now
   so trim in viewer
 - modified spatial filter qc check to read all run_lane filter.stats files
 - changed naming of spatial_filter stats files to <run>_<lane>*.spatial_filter.stats
 - upstream_tags qc check - replaced bamindexdecoder with bambi decode
 - dropped ability for qc checks to sub-sample input fastq
     instead run the checks directly off the cached fastq files
 - NovaSeq changes, new InterOp file format and per lane read counts now 64-bit unsigned ints
 - make travis happy as running apt-get update by default was disabled.
 - NovaSeq run info file size is around 95KB, too large for the text column type.
     Column type changed to mediumtext.
 - upstream_tags autoqc check: standardise access to the tracking database
 - 'execute' method of the parent autoqc check to error if input files do not exist
 - dependency on tracking XML feeds removed
 - bwa0_6 (newer bwa) explicitly requested where bwa aligner is used
 - all C source code moved to https://github.com/wtsi-npg/npg_qc_utils, executables are
   built by Conda https://github.com/wtsi-npg/npg_conda/tree/devel/recipes/npg_qc_utils/65.0;
   Build.PL changed accordingly

release 64.6.3
 - update parsing of spatial filter stats in spatial_filter QC check

release 64.6.2
 - QC viewer changes for genotype call

release 64.6.1
 - tweak to GbS library type check in genotype call as arrived as GBS (now case-insensitive).
 - Exit rna seqc gracefully if bam has no reads